# petasearch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run-test.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
data/: CMakeLists.txt  easypetasearch.sh  petasearch.sh
lib/block-aligner/: CMakeLists.txt  Cargo.toml  build.rs
lib/block-aligner/c/: Makefile  block_aligner.h
lib/block-aligner/src/: lib.rs  scores.rs
lib/ips4o/ips4o/: bucket_pointers.hpp
lib/mmseqs/src/commons/: DBWriter.cpp  DBWriter.h
lib/mmseqs/src/prefiltering/: Indexer.cpp
lib/mmseqs/src/util/: createdb.cpp
src/: CMakeLists.txt  LocalCommandDeclarations.h  srasearch.cpp
src/commons/: BitManipulateMacros.h  BlockAligner.cpp  BlockAligner.h  CMakeLists.txt  FixedKmerGenerator.cpp  FixedKmerGenerator.h  LocalParameters.h  QueryTableEntry.h  SRADBReader.cpp  SRADBReader.h  SRADBWriter.cpp  SRADBWriter.h  SRAUtil.cpp  SRAUtil.h  TargetTableEntry.h
src/sra/: CMakeLists.txt  blockalign.cpp  compare2kmertables.cpp  comparekmertables.cpp  computeAlignments.cpp  convert2sradb.cpp  convertsraalignments.cpp  createkmertable.cpp  playground.cpp  readandprint.cpp
src/workflow/: CMakeLists.txt  easypetasearch.cpp  petasearch.cpp
tests/: MSA_Cas7-11_multiline.fa  computeAlignments.cpp  convert2sradb.cpp  createkmertableTest.cpp
util/: update_blockaligner.sh  update_corrosion.sh  update_googletest.sh
