cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
project(srasearch CXX)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/lib/mmseqs/cmake")

set(FRAMEWORK_ONLY 1 CACHE INTERNAL "" FORCE)
include(MMseqsSetupDerivedTarget)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(Rust_TOOLCHAIN nightly)
add_subdirectory(lib/corrosion)
corrosion_import_crate(MANIFEST_PATH lib/block-aligner/Cargo.toml FEATURES simd_neon)
corrosion_set_env_vars(block-aligner BLOCK_ALIGNER_C=1)
add_subdirectory(lib/mmseqs)
add_subdirectory(data)
include_directories(lib)
include_directories(lib/block-aligner/c)
add_subdirectory(src)
