cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
project(srasearch CXX)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/lib/mmseqs/cmake")

set(FRAMEWORK_ONLY 1 CACHE INTERNAL "" FORCE)
include(MMseqsSetupDerivedTarget)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(lib/mmseqs)

set(Rust_TOOLCHAIN nightly)
add_subdirectory(lib/corrosion)
if (X64) 
    set(RUST_FEATURE simd_avx2)
elseif (ARM)
    set(RUST_FEATURE simd_neon)
else()
    message(FATAL_ERROR "No SIMD support for this architecture")
endif()
message("-- Rust Feature: ${RUST_FEATURE}")
corrosion_import_crate(MANIFEST_PATH lib/block-aligner/Cargo.toml FEATURES ${RUST_FEATURE})
add_subdirectory(data)
include_directories(lib)
include_directories(lib/block-aligner/c)
add_subdirectory(src)
