[package]
name = "block-aligner"
version = "0.3.0"
authors = ["c0deb0t <daniel.liu02@gmail.com>"]
edition = "2018"
license = "MIT"
description = "SIMD-accelerated library for computing global and X-drop affine gap penalty sequence-to-sequence or sequence-to-profile alignments using an adaptive block-based algorithm."
homepage = "https://github.com/Daniel-Liu-c0deb0t/block-aligner"
repository = "https://github.com/Daniel-Liu-c0deb0t/block-aligner"
readme = "README.md"
keywords = ["SIMD", "string-distance", "alignment", "biology", "edit-distance"]
categories = ["algorithms", "hardware-support", "science", "text-processing"]
include = ["src"]

[package.metadata.docs.rs]
features = ["simd_avx2"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# Enable AVX2
simd_avx2 = []
# Enable WASM SIMD
simd_wasm = []
# Enable Neon
simd_neon = []

# Print lots of debug information
debug = ["debug_size"]
# Print only the final block sizes
debug_size = []
# Prepare code for analysis by llvm-mca
mca = []

[profile.release]
debug-assertions = false
lto = "thin"
panic = "abort"

[profile.bench]
debug-assertions = false
lto = "thin"
